# CppProjectTemplate

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CMakeLists.txt  main_class.cpp  main_class.h
tests/: main_class_tests.cpp
